修复一些问题

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,6 +4,9 @@ runmode = dev
 sessionon = true
 copyrequestbody = true
 
+#时区设置
+timezone = Asia/Shanghai
+
 #数据库配置
 db_host=127.0.0.1
 db_port=3306
