--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
 language: go
 
 go:
-  - 1.8
-  - 1.7.4
-  - 1.7.3
-  - 1.7.1
-  - 1.7
-  - 1.6
+  - 1.6.x
+  - 1.7.x
+  - 1.8.x
+  - master
 
 install:
   - go get -v -u ./...
 script:
-  - go build && go install
+  - go build -v -tags "pam" && go install
